[package]
name = "melpow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
smallvec = {version = "1.8.0", features=["const_generics", "union"]}
tmelcrypt = "0.2.4"
blake3 = "1.3.1"