[package]
name = "melpow"
version = "0.2.3-alpha.0"
edition = "2021"

description = "Core state-transition function and data structures for Themelio"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melpow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
smallvec = {version="1.8.0", features=["const_generics", "union", "serde"]}
tmelcrypt = "0.2.4"
blake3 = "1.3.1"

bincode = "1.3.3"
serde = {version="1.0.140", features=["rc"]}
anyhow = "1.0.57"

